# msba405-sample-pipeline

./: .gitignore  README.md  TEST  UPDATE
airflow/: README.md  pipeline.env  pipeline.env.template  pipeline.py  pyproject.toml  requirements.txt  run.sh  setup.py
bash/: pipeline.sh
data/: WARNING
gcp/: README.md  pipeline.sh  pyproject.toml
gcp/assets/: cleanup-staging.sql  load-from-gcs.sql  promote-staging.sql  snowflake-load.py  snowflake-load.sql  spark-gcp.py  views.sql
luigi/: README.md  pipeline.py  pyproject.toml  run.sh
spark/: spark-job.py
