[project]
name = "msba405-sample-pipeline"
version = "0.1.0"
dependencies = [
    "six",
    "luigi",
    "duckdb",
    "apache-airflow",
    "apache-airflow-providers-apache-spark",
    "apache-airflow-providers-fab",
    "apache-airflow-providers-standard"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
